# frg-signal-detection

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: descr.rst
scripts/: canonical_dimensions.py  evc_distribution.py  frg_equations.py  frg_equations_lpa.py  generate_config.py
src/frg/: __init__.py
src/frg/configs/: scan_template.json
src/frg/distributions/: distributions.py
src/frg/scripts/: canonical_dimensions.py  evc_distribution.py  frg_equations.py  frg_equations_lpa.py  generate_config.py
src/frg/utils/: analysis.py
