[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Riccardo Finotello", email = "riccardo.finotello@cea.fr" },
    { name = "Vincent Lahoche", email = "vincent.lahoche@cea.fr" },
    { name = "Dine Ousmane Samary", email = "dine.ousmanesamary@cea.fr" },
]
name = "frg-signal-detection"
description = "An agnostic definition of detection limit using renormalization group techniques"
maintainers = [
    { name = "Riccardo Finotello", email = "riccardo.finotello@cea.fr" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.13"
keywords = [
    "signal detection",
    "renormalization group",
    "theoretical physics",
    "information theory",
    "field theory",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "ipykernel==6.29.5",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "pandas==2.3.0",
    "scikit-image==0.25.0",
    "scipy==1.14.1",
    "yacs==0.1.8",
]

[dependency-groups]
dev = ["better-exceptions>=0.3.3", "pre-commit>=4.2.0"]
docs = ["sphinx>=8.2.3", "sphinx-rtd-theme>=3.0.2"]
test = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]

[project.optional-dependencies]
test = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
docs = ["sphinx>=8.2.3", "sphinx-rtd-theme>=3.0.2"]
dev = ["better-exceptions>=0.3.3", "pre-commit>=4.2.0"]

[project.urls]
Homepage = "https://github.com/thesfinox/frg-signal-detection"
Documentation = "https://detection-limit-signal-detection-db0eefa500d1c4c011fb006e8740d8.pages.in2p3.fr/"
Repository = "https://github.com/thesfinox/frg-signal-detection"
Issues = "https://github.com/thesfinox/frg-signal-detection/issues"

[project.scripts]
frg-canonical-dimensions = "frg.scripts.canonical_dimensions:cli"
frg-evc-distribution = "frg.scripts.evc_distribution:cli"
frg-equations = "frg.scripts.frg_equations:cli"
frg-equations-lpa = "frg.scripts.frg_equations_lpa:cli"
frg-generate-config = "frg.scripts.generate_config:cli"
frg-init = "frg.scripts.init:cli"

[tool.setuptools.dynamic]
version = { attr = "frg.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frg = [
    "configs/*.json",
    "configs/*.yaml",
    "notebooks/*.ipynb",
    "scripts/*.sh",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
